Fix: Make pen buttons appearnace have white border when ative to improve visibility

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ h1 {
     background-color: #AFADB6;
     color: #2F3362;
     cursor: pointer;
-    border-color: #2F3362;
+    border-color: #AFADB6;
     border-style: solid;
     margin: 3px;
     padding: 5px;
